# Homework_21.1

./: README.md  pyproject.toml
blog/: models.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/: contacts.html  home.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_details.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
